<resources>
    <string name="app_name">IPMS</string>
    <string name="todo">TODO</string>
    <string name="admin_login">Admin Login</string>
    <string name="student_login">Student Login</string>
    <string name="Username" />
    <string name="Password" />
    <string name="Image" />
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_an_account">Create an Account!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account_Sign_up_here">Don\'t have an account ? Sign up here</string>
    <string name="sign_in">sign in</string>
    <string name="login_in_to_account">Login in to account</string>
    <string name="more_information">More Information</string>
    <string name="parent_mobile_number">Parent Mobile Number</string>
    <string name="department">Department</string>
    <string name="registration_number">Registration Number</string>
    <string name="semester">Semester</string>
    <string name="next">Next</string>
    <string name="student_mobile_number">Student Mobile Number</string>
    <string name="ssc_completion_year">SSC Completion Year</string>
    <string name="hsc_completion_year">HSC Completion Year</string>
    <string name="hsc_percentage">HSC Percentage</string>
    <string name="ssc_percentage">SSC Percentage</string>
    <string name="diploma_completion_year">Diploma Completion Year</string>
    <string name="diploma_percentage">Diploma Percentage</string>
    <string name="previous">Previous</string>
    <string name="_2nd_sem_sgpa">2nd sem SGPA</string>
    <string name="_1st_sem_sgpa">1st sem SGPA</string>
    <string name="_3rd_sem_sgpa">3rd sem SGPA</string>
    <string name="engineering_admission_year">Engineering admission year</string>
    <string name="_4th_sem_sgpa">4th sem SGPA</string>
    <string name="_5th_sem_sgpa">5th sem SGPA</string>
    <string name="live_backlog">Live Backlog</string>
    <string name="avergae_sgpa">Avergae SGPA</string>
    <string name="_7th_sem_sgpa">7th sem SGPA</string>
    <string name="_6th_sem_sgpa">6th sem SGPA</string>
    <string name="graduation_year">Graduation year</string>
    <string name="dead_backlog">Dead Backlog</string>
    <string name="_8th_sem_sgpa">8th sem SGPA</string>
    <string name="select_one_option">Select one option</string>
    <string name="placement_facility_by_college">Placement facility by College</string>
    <string name="higher_studies">Higher Studies</string>
    <string name="entrepreneurship">Entrepreneurship</string>
    <string name="placed">Placed</string>
    <string name="unplaced">Unplaced</string>
    <string name="placement_status">Placement Status</string>
    <string name="title_activity_student_dashboard">student_dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="placements">Placements</string>
    <string name="internships">Internships</string>
    <string name="add_placement_details">Add Placements Details</string>
    <string name="check_students_profile">Check Students Profile</string>
    <string name="notification">Notification</string>
    <string name="logo">logo</string>
    <string name="total_students_placed">Total Students Placed</string>
    <string name="total_placement_offers">total placement offers</string>
    <string name="title_activity_student_daskboard">student_daskboard</string>
    <string name="your_total_offers">YOUR TOTAL OFFERS</string>
    <string name="_3_offers">3 Offers</string>
    <string name="visiting_companies">Visiting Companies</string>
    <string name="company_name">Company Name</string>
    <string name="drive_date">Drive Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_internship">Add Internships</string>
    <string name="add_internships">Add Internships</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="end_date">End date</string>
    <string name="add_details">Add Details</string>
    <string name="start_date">Start date</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="weekly_attendance">Weekly Attendance</string>
    <string name="student_feedback">Student Feedback</string>
    <string name="student_biodate">Student Biodate</string>
    <string name="my_internships">My Internships</string>
    <string name="batch">Batch</string>
    <string name="company_name_Small">Company Name</string>
    <string name="student_feedback_TV">Student FeedBack</string>
    <string name="yyyy_mm_dd">YYYY/MM/DD</string>
    <string name="capgemini">Capgemini</string>
    <string name="change_photo">Change Photo</string>
    <string name="edit_placements_details">Edit Placements Details</string>
    <string name="edit_educational_details">Edit Educational Details</string>
    <string name="update_profile_pic">Update Profile Pic</string>
    <string name="about">About</string>
    <string name="user_id_email_id">User ID/Email ID</string>
    <string name="mansi_1234">Mansi@1234</string>
    <string name="name">Name</string>
    <string name="mansi_chitriv">Mansi Chitriv</string>
    <string name="_9823814229">9823814229</string>
    <string name="_7666781735">7666781735</string>
    <string name="educational_details">Educational Details</string>
    <string name="_19010472">19010472</string>
    <string name="_7_5">7.5</string>
    <string name="_8th_semster_sgpa">8th Semster SGPA</string>
    <string name="_7th_semster_sgpa">7th Semster SGPA</string>
    <string name="_6th_semster_sgpa">6th Semster SGPA</string>
    <string name="_5th_semster_sgpa">5th Semster SGPA</string>
    <string name="_4th_semster_sgpa">4th Semster SGPA</string>
    <string name="_3rd_semester_sgpa">3rd Semester SGPA</string>
    <string name="_2nd_semester_sgpa">2nd Semester SGPA</string>
    <string name="_1st_semester_sgpa">1st Semester SGPA</string>
    <string name="_2020">2020</string>
    <string name="engineering_admission_year_TV">Engineering Admission Year</string>
    <string name="minus">-</string>
    <string name="diploma_year_of_passing">Diploma Year of Passing</string>
    <string name="_2018">2018</string>
    <string name="_12th_year_of_passing">12th Year of Passing</string>
    <string name="_90">90</string>
    <string name="_10th_percentage">10th Percentage</string>
    <string name="_2016">2016</string>
    <string name="_10th_year_of_passing">10th Year of Passing</string>
    <string name="_6">6</string>
    <string name="information_technology">Information Technology</string>
    <string name="your_placements">Your Placements</string>
    <string name="_12">12</string>
    <string name="salary_annum">Salary (Annum)</string>
    <string name="salary">Salary</string>
    <string name="duration">Duration</string>
    <string name="registration_link">Registration Link</string>
    <string name="my_internship">My Internship</string>
    <string name="current_drives">Current Drives</string>
    <string name="see_your_current_status">See Your Current Status</string>
    <string name="upload_offer_letters">Upload Offer letters</string>
    <string name="_12th_percentage">12th Percentage</string>
    <string name="_80">80</string>
</resources>