<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_placements"
            android:icon="@drawable/ic_folder"
            android:title="@string/placements" />
        <item
            android:id="@+id/nav_internships"
            android:icon="@drawable/ic_folder"
            android:title="@string/internships" />
        <item
            android:id="@+id/nav_add_placements"
            android:icon="@drawable/ic_folder"
            android:title="@string/add_placement_details" />
        <item
            android:id="@+id/nav_check_students_profile"
            android:icon="@drawable/ic_folder"
            android:title="@string/check_students_profile" />
    </group>
</menu>